--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -137,18 +137,19 @@ p {
   }
 }
 .select-customize {
-  // width: 268px;
-  padding: 5px;
-  font-size: 16px;
-  line-height: 1;
-  border: 0;
-  border-radius: 5px;
-  height: 34px;
-  font-weight: 400;
-  background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
-    no-repeat right #ddd;
-  -webkit-appearance: none;
-  background-position-x: 95%;
+  position: relative;
+  select {
+    appearance: none;
+    -webkit-appearance: none;
+  }
+  &::after {
+    content: "\f107";
+    font-family: FontAwesome;
+    position: absolute;
+    top: 20%;
+    right: 0.5rem;
+    color: $color-gray-dark-1;
+  }
 }
 // =====================================================
 // Section Navbar
@@ -745,6 +746,7 @@ p {
     width: 1.5rem;
   }
 }
+
 // =====================================================
 // Offers and Rewards
 // =====================================================
@@ -756,7 +758,8 @@ p {
 .deal {
   &__box {
     & > div {
-      border-radius: 0.45rem;
+      border-radius: 0 0.45rem 0.45rem 0;
+      overflow: hidden;
     }
     .row .col-6:first-of-type {
       border-radius: 0 50% 50% 0;
